database connection trial 1

--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -24,6 +24,9 @@
                     <div class="card-subtitle text-muted mb-2">
                         <%= article.createdAt.toLocaleDateString() %>
                     </div>
+                    <div class="class-text mb-2">
+                        <%= article.description %>
+                    </div>
                 </div>
                 <%= article.title %>
             </div>
